--- a/pages/7588.html
+++ b/pages/7588.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9317/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9317/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -750,6 +750,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#examples'>Examples</a></li>
+<li><a href='#pointwise_reasoning'>Pointwise reasoning</a></li>
 <li><a href='#definition'>Definition</a></li>
 <li><a href='#applications'>Applications</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
@@ -806,12 +807,30 @@ margin-left: 0em;
 
 <li>
 <p>In <a class="existingWikiWord" href="/nlab/show/formal+topology">formal topology</a>, one studies a set <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi></mrow><annotation encoding="application/x-tex">B</annotation></semantics></math> of <em><a class="existingWikiWord" href="/nlab/show/base+for+a+topology">basic</a></em> open subspaces, with a <em>cover relation</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi><mo>◃</mo><mi>U</mi></mrow><annotation encoding="application/x-tex">a\triangleleft U</annotation></semantics></math> between elements and subsets of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi></mrow><annotation encoding="application/x-tex">B</annotation></semantics></math>, to show when one basic open is covered by a family of others. There are various flavours of this. <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>◃</mo></mrow><annotation encoding="application/x-tex">\triangleleft</annotation></semantics></math> may be the full cover relation or a generating part, and there may sometime be included the extra structure of a <a class="existingWikiWord" href="/nlab/show/positivity+predicate">positivity</a>. In each case the formal topology has the structure of a <a class="existingWikiWord" href="/nlab/show/posite">posite</a> and so gives rise to a geometric theory of flat continuous functors. Its propositional symbols are <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ϕ</mi> <mi>a</mi></msub></mrow><annotation encoding="application/x-tex">\phi_a</annotation></semantics></math> for each <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi><mo>∈</mo><mi>B</mi></mrow><annotation encoding="application/x-tex">a\in B</annotation></semantics></math>. The axioms are -</p>
+
+<ul>
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⊤</mo><mo>⊢</mo><msub><mo lspace="thinmathspace" rspace="thinmathspace">⋁</mo> <mrow><mi>a</mi><mo>∈</mo><mi>B</mi></mrow></msub><msub><mi>ϕ</mi> <mi>a</mi></msub></mrow><annotation encoding="application/x-tex">\top \vdash \bigvee_{a\in B} \phi_a</annotation></semantics></math></p>
+</li>
+
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ϕ</mi> <mi>a</mi></msub><mo>∧</mo><msub><mi>ϕ</mi> <mi>b</mi></msub><mo>⊢</mo><mo lspace="thinmathspace" rspace="thinmathspace">⋁</mo><mo stretchy="false">{</mo><msub><mi>ϕ</mi> <mi>c</mi></msub><mo lspace="mediummathspace" rspace="mediummathspace">∣</mo><mi>c</mi><mo>◃</mo><mo stretchy="false">{</mo><mi>a</mi><mo stretchy="false">}</mo><mo>∧</mo><mi>c</mi><mo>◃</mo><mo stretchy="false">{</mo><mi>b</mi><mo stretchy="false">}</mo><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">\phi_a \wedge \phi_b \vdash \bigvee\{\phi_c\mid c\triangleleft\{a\} \wedge c\triangleleft\{b\}\}</annotation></semantics></math></p>
+</li>
+
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ϕ</mi> <mi>a</mi></msub><mo>⊢</mo><msub><mo lspace="thinmathspace" rspace="thinmathspace">⋁</mo> <mrow><mi>b</mi><mo>∈</mo><mi>U</mi></mrow></msub><msub><mi>ϕ</mi> <mi>b</mi></msub></mrow><annotation encoding="application/x-tex">\phi_a \vdash \bigvee_{b\in U}\phi_{b}</annotation></semantics></math> (if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi><mo>◃</mo><mi>U</mi></mrow><annotation encoding="application/x-tex">a\triangleleft U</annotation></semantics></math>)</p>
+</li>
+</ul>
 </li>
 </ul>
 
-<p>(To be continued)</p>
+<p>The models are known as <em>formal points</em>.</p>
 
-<p>In contrast, the traditional way of doing topology using points may be called <strong>pointwise topology</strong>.</p>
+<h2 id="pointwise_reasoning">Pointwise reasoning</h2>
+
+<p>The traditional way of doing topology using points may be called <strong>pointwise topology</strong>. Obviously that is natural in point-set topology, but for point-free there is an apparent problem: there may not be enough of them.</p>
+
+<p>It is possible to reason in an entirely <em>pointless</em> style, without reference to the points. For instance with locales, the</p>
 
 <h2 id="definition">Definition</h2>
 
@@ -864,14 +883,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 27, 2018 at 13:08:25.
+  Last revised on November 27, 2018 at 14:10:55.
   See the <a href="https://ncatlab.org/nlab/history/point-free topology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/point-free+topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/point-free+topology/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/point-free+topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/point-free+topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/point-free+topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/point-free+topology/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/point-free+topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/point-free+topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/point-free topology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
