--- a/pages/444.html
+++ b/pages/444.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5223/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9319/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -428,7 +428,7 @@ margin-left: 0em;
 </div></div>
 </div>
 </div>
-<hr />
+
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
@@ -937,7 +937,7 @@ margin-left: 0em;
 <div class="num_prop">
 <h6 id="proposition_3">Proposition</h6>
 
-<p>A <a class="existingWikiWord" href="/nlab/show/simplicial+set">simplicial set</a> is the nerve of a <a class="existingWikiWord" href="/nlab/show/groupoid">groupoid</a> precisely if <em>all</em> <a class="existingWikiWord" href="/nlab/show/horns">horns</a> have <em>unique</em> fillers.</p>
+<p>A <a class="existingWikiWord" href="/nlab/show/simplicial+set">simplicial set</a> is the nerve of a <a class="existingWikiWord" href="/nlab/show/groupoid">groupoid</a> precisely if <em>all</em> <a class="existingWikiWord" href="/nlab/show/horns">horns</a> of dimension <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>&gt;</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\gt 1</annotation></semantics></math> have <em>unique</em> fillers.</p>
 </div>
 
 <div class="num_prop">
@@ -1162,14 +1162,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 24, 2018 at 09:46:12.
+  Last revised on November 27, 2018 at 20:50:43.
   See the <a href="https://ncatlab.org/nlab/history/nerve" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/nerve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nerve/52" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(52 revisions)</span> | <a href="/nlab/show/diff/nerve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nerve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/nerve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nerve/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/nerve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nerve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/nerve/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
