--- a/pages/1594.html
+++ b/pages/1594.html
@@ -1039,7 +1039,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Eugene+Lerman">Eugene Lerman</a>, <em>Orbifolds as stacks?</em> (<a href="http://arxiv.org/abs/0806.4160">arXiv</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Eugene+Lerman">Eugene Lerman</a>, <em>Orbifolds as stacks?</em> (<a href="http://arxiv.org/abs/0806.4160">arXiv:0806.4160</a>)</p>
 </li>
 </ul>
 
@@ -1146,14 +1146,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 13, 2018 at 05:08:07.
+  Last revised on November 28, 2018 at 04:15:20.
   See the <a href="https://ncatlab.org/nlab/history/orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/49" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(49 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold/50" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(50 revisions)</span> | <a href="/nlab/show/diff/orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
