--- a/pages/19844.html
+++ b/pages/19844.html
@@ -1069,7 +1069,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Guido D’Amico, Marco Nardecchia, Paolo Panci, Francesco Sannino, Alessandro Strumia, Riccardo Torre, Alfredo Urbano,</p>
+<p>Guido D’Amico, Marco Nardecchia, Paolo Panci, Francesco Sannino, <a class="existingWikiWord" href="/nlab/show/Alessandro+Strumia">Alessandro Strumia</a>, Riccardo Torre, Alfredo Urbano,</p>
 
 <p><em>Flavour anomalies after the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>R</mi> <mrow><msup><mi>K</mi> <mo>*</mo></msup></mrow></msub></mrow><annotation encoding="application/x-tex">R_{K^\ast}</annotation></semantics></math> measurement</em>, J. High Energ. Phys. (2017) 2017 (<a href="https://arxiv.org/abs/1704.05438">arXiv:1704.05438</a>)</p>
 </li>
@@ -1112,14 +1112,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 25, 2018 at 04:13:14.
+  Last revised on December  1, 2018 at 02:45:04.
   See the <a href="https://ncatlab.org/nlab/history/flavour anomaly" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/flavour+anomaly" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/flavour+anomaly/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/flavour+anomaly" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/flavour+anomaly" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/flavour+anomaly" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/flavour+anomaly/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/flavour+anomaly" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/flavour+anomaly" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/flavour anomaly/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
