--- a/pages/375.html
+++ b/pages/375.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4039/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4039/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -640,7 +640,7 @@ margin-left: 0em;
 
 <h2 id="definition">Definition</h2>
 
-<p>A <strong>cartesian closed category</strong> (sometimes: <strong>ccc</strong>) is a category with finite <a class="existingWikiWord" href="/nlab/show/products">products</a> which is <a class="existingWikiWord" href="/nlab/show/closed+monoidal+category">closed</a> with respect to its <a class="existingWikiWord" href="/nlab/show/cartesian+monoidal+category">cartesian monoidal structure</a>.</p>
+<p>A <strong>cartesian closed category</strong> (sometimes: <strong>ccc</strong>) is a category with <a class="existingWikiWord" href="/nlab/show/finite+products">finite products</a> which is <a class="existingWikiWord" href="/nlab/show/closed+monoidal+category">closed</a> with respect to its <a class="existingWikiWord" href="/nlab/show/cartesian+monoidal+category">cartesian monoidal structure</a>.</p>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/internal+hom">internal hom</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>S</mi><mo>,</mo><mi>X</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[S,X]</annotation></semantics></math> in a cartesian closed category is often called <a class="existingWikiWord" href="/nlab/show/exponentiation">exponentiation</a> and is denoted <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>X</mi> <mi>S</mi></msup></mrow><annotation encoding="application/x-tex">X^S</annotation></semantics></math>.</p>
 
@@ -855,14 +855,14 @@ z \times b \to a &amp; C[c]
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 21:38:15.
+  Last revised on December  1, 2018 at 02:47:31.
   See the <a href="https://ncatlab.org/nlab/history/cartesian closed category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cartesian+closed+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cartesian+closed+category/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/cartesian+closed+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cartesian+closed+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cartesian+closed+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cartesian+closed+category/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/cartesian+closed+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cartesian+closed+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/cartesian closed category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
