--- a/pages/6879.html
+++ b/pages/6879.html
@@ -903,7 +903,7 @@ margin-left: 0em;
 
 <p>A <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical field theory</a> with <a class="existingWikiWord" href="/nlab/show/action+functional">action functional</a> having the standard kinetic term non-derivative interactions has stable, time-independent solutions where all fields are constant on a value that is a local minimum of the interaction term potential energy (if any).</p>
 
-<p>In the corresponding <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a>, however, a state that is initially concentrated this way on a local minimum which is not also a global minimum is not time-independent, but will exhibit <span class="newWikiWord">quantum tunneling<a href="/nlab/new/quantum+tunneling">?</a></span> behaviour by which the fields “tunnel” through the local potential barrier into the global minimum. Therefore one speaks of a <em>false <a class="existingWikiWord" href="/nlab/show/vacuum">vacuum</a></em> in this case.</p>
+<p>In the corresponding <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a>, however, a state that is initially concentrated this way on a local minimum which is not also a global minimum is not time-independent, but will exhibit <a class="existingWikiWord" href="/nlab/show/quantum+tunneling">quantum tunneling</a> behaviour by which the fields “tunnel” through the local potential barrier into the global minimum. Therefore one speaks of a <em>false <a class="existingWikiWord" href="/nlab/show/vacuum">vacuum</a></em> in this case.</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -978,20 +978,26 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Sidney+Coleman">Sidney Coleman</a>, Frank De Luccia, <em>Gravitational effects on and of vacuum decay</em> , Phys. Rev. D 21, 3305–3315 (1980) (<a href="http://prd.aps.org/abstract/PRD/v21/i12/p3305_1">web</a>)</p>
 </li>
 </ul>
+
+<p>More recent development (in view of <a class="existingWikiWord" href="/nlab/show/Higgs+field">Higgs metastability</a>):</p>
+
+<ul>
+<li>Anders Andreassen, David Farhi, William Frost, Matthew D. Schwartz, <em>Precision decay rate calculations in quantum field theory</em>, Phys. Rev. D 95, 085011 (2017) (<a href="https://arxiv.org/abs/1604.06090">arXiv:1604.06090</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 11:01:14.
+  Last revised on December  1, 2018 at 02:37:04.
   See the <a href="https://ncatlab.org/nlab/history/false vacuum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/false+vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/false+vacuum/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/false+vacuum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/false+vacuum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/false+vacuum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/false+vacuum/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/false+vacuum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/false+vacuum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/false vacuum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
