--- a/pages/10113.html
+++ b/pages/10113.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1063,7 +1063,7 @@ margin-left: 0em;
 <li>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Meson">Hadron</a></em></li>
 </ul>
 
-<p>Computation of the <a class="existingWikiWord" href="/nlab/show/mass">mass</a> of hadrons using <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> (see also <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>) is discussed in</p>
+<p>Computation of the <a class="existingWikiWord" href="/nlab/show/mass">mass</a> of hadrons using <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> (see also <em><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></em> and <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>) is discussed in</p>
 
 <ul>
 <li>
@@ -1088,14 +1088,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 12, 2018 at 10:29:12.
+  Last revised on December  2, 2018 at 01:42:37.
   See the <a href="https://ncatlab.org/nlab/history/hadron" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/hadron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hadron/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/hadron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hadron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/hadron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hadron/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/hadron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hadron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/hadron/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
