--- a/pages/9178.html
+++ b/pages/9178.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9332/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -348,7 +348,13 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/quark">quark</a></p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/top+quark">top quark</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/bottom+quark">bottom quark</a></p>
+</li>
 </ul>
 </li>
 
@@ -364,7 +370,13 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/meson">meson</a></p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/pion">pion</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/pion">pion</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/B-meson">B-meson</a></p>
+</li>
 </ul>
 </li>
 
@@ -411,6 +423,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/dual+graviton">dual graviton</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/leptoquark">leptoquark</a></p>
+</li>
 </ul><p><strong><a class="existingWikiWord" href="/nlab/show/auxiliary+fields">auxiliary fields</a></strong></p><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/ghost+field">ghost field</a></p>
@@ -432,6 +448,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
 </ul>
 </div>
 
@@ -439,9 +456,17 @@ margin-left: 0em;
 
 <p>The <em>quarks</em> is one of the fundamental <a class="existingWikiWord" href="/nlab/show/particles">particles</a>/<a class="existingWikiWord" href="/nlab/show/matter">matter</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">fields</a> in the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a>. Quarks couple to the <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> given by <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>.</p>
 
+<p>At room-<a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> quarks always form <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> to <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>. This phenomenon of <em><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></em> is quantitatively well-reproduced by <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> computations (see <a href="#FodorHoelbling12">Fodor-Hoelbling 12</a>) and qualitatively well reproduced by conceptual arguments such as the <a class="existingWikiWord" href="/nlab/show/AdS%2FQCD+correspondence">AdS/QCD correspondence</a>, but a full analytic <a class="existingWikiWord" href="/nlab/show/proof">proof</a> of confinement from a rigorous <a class="existingWikiWord" href="/nlab/show/AQFT">AQFT</a>-like foundation of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> remains open, see the <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>.</p>
+
+<p>However, at high <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> goes through a <em>deconfinement</em> <a class="existingWikiWord" href="/nlab/show/phase+transition">phase transition</a> and enters another <a class="existingWikiWord" href="/nlab/show/phase+of+matter">phase of matter</a> known as the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a>. As the name suggests, here quarks and <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a> are free.</p>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a></p>
+</li>
+
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/squark">squark</a></p>
 </li>
@@ -454,20 +479,48 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/B+meson">B meson</a></p>
 </li>
 </ul>
+
+<h2 id="references">References</h2>
+
+<p>Due to <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a>, before the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> was seen in <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> it was a logical possibility that the quark-model of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is not actually correct. But more recend ab-initio computation in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> show that starting with the quark model, at least the light <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> observes in <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> are reproduced by these ab-initio computations. This is discussed in the following references, see the good review <a href="#FodorHoelbling12">Fodor-Hoelbling 12</a></p>
+
+<ul>
+<li>
+<p>S. Durr, Z. Fodor, J. Frison, C. Hoelbling, R. Hoffmann, S.D. Katz, S. Krieg, T. Kurth, L. Lellouch, T. Lippert, K.K. Szabo, G. Vulvert,</p>
+
+<p><em>Ab-initio Determination of Light Hadron Masses</em>,</p>
+
+<p>Science 322:1224-1227,2008 (<a href="https://arxiv.org/abs/0906.3599">arXiv:0906.3599</a>)</p>
+</li>
+
+<li id="FodorHoelbling12">
+<p>Zoltan Fodor, Christian Hoelbling, <em>Light Hadron Masses from Lattice QCD</em>, Rev. Mod. Phys. 84, 449, (<a href="https://arxiv.org/abs/1203.4789">arXiv:1203.4789</a>)</p>
+</li>
+
+<li>
+<p>S. Aoki et. al. <em>Review of lattice results concerning low-energy particle physics</em> (<a href="https://arxiv.org/abs/1607.00299">arXiv:1607.00299</a>)</p>
+</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Quark">Quark</a></em></li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 07:56:25.
+  Last revised on December  2, 2018 at 01:56:25.
   See the <a href="https://ncatlab.org/nlab/history/quark" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/quark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/quark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quark/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
